added some images and content

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       learning technical sophistication, probably more. To join our
       movement, <a href="https://learnenough.com/email">sign up for our official email list now.</a>
    </p>
+
+   <p>
+     HTML was created by the original "web developer", computer scientist <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee"> Tim Berners-Lee</a>. It's not true that Sir Time invented HTML in order to share pictures of his cat, but it would be cool if it were.
+   </p>
+
+   <img src="images/kitten.jpg" alt="An adorable kitten">
+
    <h2>Background</h2>
    <p>
       Learn Enough to Be Dangerous is an outgrowth of the <a href="https://railstutorial.org/">Ruby on Rails Tutorial</a> and the <a href="https://www.softcover.io/">Softcover publishing platform</a>.
@@ -31,7 +38,9 @@
    </p>
 
    <h3>Michael Hartl</h3>
-    
+  
+   <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150" alt="Michael Hartl">
+
     <p>
       Michael is the creator of the <a href="https://www.railstutorial.org/">
       Ruby on Rails Tutorial</a> and principal author of the
@@ -48,6 +57,8 @@
 
    <h3>Lee Donahoe</h3>
 
+   <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150" alt="Lee Donahoe">
+
     <p>
       When he's not literally swimming with sharks or hunting powder stashes
       on his snowboard, you can find Lee in front of his computer designing
@@ -60,6 +71,8 @@
     </p>
 
    <h3>Nick Merwin</h3>
+
+   <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150" alt="Nick Merwin">
 
     <p>
       You may have seen him shredding guitar live with Capital Cities on Jimmy
