--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@
       movement, <a href="https://learnenough.com/email">sign up for our official email list now.</a>
    </p>
 
+    <p>
+      <a href="https://twitter.com/learnenough" target="_blank"
+      rel="noopener" style="text-decoration: none;">
+        <img src=images/small_twitter_logo.png>
+      </a>
+      You should follow Learn Enough on Twitter
+      <a href="https://twitter.com/learnenough"
+         target="_blank" rel="noopener">here</a>.
+    </p>
+
    <p>
      HTML was created by the original "web developer", computer scientist <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee"> Tim Berners-Lee</a>. It's not true that Sir Time invented HTML in order to share pictures of his cat, but it would be cool if it were.
    </p>
 
-   <img src="images/kitten.jpg" alt="An adorable kitten">
+   <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
+    <img src="images/kitten.jpg" alt="An adorable kitten">
+   </a>
 
    <h2>Background</h2>
    <p>
