LE 4.2 update. HTML / CSS

--- a/tags.html
+++ b/tags.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
+
    <h1>Important HTML tags</h1>
     <a href="https://cdn.learnenough.com/storm_trooper_tagged.jpg">
     <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
@@ -32,14 +38,14 @@
       </tr>
       </header>
       <tr>
-        <td><code>h1</code>&ndash;<code>h6</code></td>
-        <td>headings</td>
-        <td>include a heading (levels 1&ndash;6)</td>
+        <td style="padding: 10px;"><code>h1</code>&ndash;<code>h6</code></td>
+        <td style="padding: 10px;">headings</td>
+        <td style="padding: 10px;">include a heading (levels 1&ndash;6)</td>
       </tr>
       <tr>
-        <td><code>p</code></td>
-        <td>paragraph</td>
-        <td>include a paragraph of text</td>
+        <td style="padding: 10px;"><code>p</code></td>
+        <td style="padding: 10px;">paragraph</td>
+        <td style="padding: 10px;">include a paragraph of text</td>
       </tr>
       <tr>
         <td><code>table</code></td>
@@ -145,6 +151,8 @@
         <td><code>ul</code></td>
         <td>unordered list</td>
         <td>creates a list with bullet points</td>
+        kernal
+
         <td>
           <code>&lt;ul&gt;&lt;/ul&gt;</code>
         </td>
