--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head>    
     <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
+
    <h1>The Learn Enough Story</h1>
    <p>
    	   Learn Enough to Be Dangerous is a leader in the movement to teach
