--- a/moby_dick.html
+++ b/moby_dick.html
@@ -6,8 +6,13 @@
 </head>
 <body>
 
-  <!-- much here to be style, will do so in last section -->
-  <header>
+   <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
+
+  <header style="text-align: center; margin: 0 0 80px;">
     <h1>A Softcover Book Report</h1>
     <h2>Moby-Dick (or, The Whale)</h2>
   </header>
@@ -27,7 +32,7 @@
     <h3>Moby-Dick: A classic tale of the sea</h3>
 
     <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
-      <img src="images/moby_dick.png" alt="Moby Dick">
+      <img src="images/moby_dick.png" alt="Moby Dick" height="200px" style="float: left; margin-right: 40px;">
     </a>
 
     <p>
@@ -37,7 +42,8 @@
 
     <blockquote>
       <p>
-        <span>Call me Ishmael.</span> Some years ago-never mind how long precisely- having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation.
+        <span style="font-style: normal; font-size: 24px; font-weight: bold; color: red;">Call me Ishmael.</span> 
+        Some years ago-never mind how long precisely- having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation.
       </p>
     </blockquote>
 
