--- a/moby_dick.html
+++ b/moby_dick.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-   <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+ <div style="text-align: right;">
+      <a href="index.html" style= "text-decoration: none; color: blue;">Home</a>
+      <a href="tags.html" style="margin-left: 10px; text-decoration: none; color: blue;">Tags</a>
+      <a href="moby_dick.html" style="margin-left: 10px; text-decoration: none; color: blue;">Moby Dick</a>
     </div>
 
   <header style="text-align: center; margin: 0 0 80px;">
@@ -19,20 +19,21 @@
 
   <div>
     <p>
-      The <a href="https://softcover.io/">Softcover</a> publishing platform was designed mainly for ebooks like the <a href="https://railstutorial.org/book"><em>Ruby on Rails Tutorial</em>book</a> and <a href="https://www.learnenough.com/html"><em>Learn Enough HTML to be dangerous</em></a>, but it's also good for making more traditional books, such as the novel <em>Moby Dick</em> by Herman Melville (sometimes writen as <em>Moby Dick</em>). We present below a short and affectionately irreverant book report on this classic of American literature.
+      The <a href="https://softcover.io/">Softcover</a> publishing platform was designed mainly for ebooks like the <a href="https://railstutorial.org/book"><em>Ruby on Rails Tutorial</em></a> book and <a href="https://www.learnenough.com/html"><em>Learn Enough HTML to be dangerous</em></a>, but it's also good for making more traditional books, such as the novel <em>Moby Dick</em> by Herman Melville (sometimes writen as <em>Moby Dick</em>). We present below a short and affectionately irreverant book report on this classic of American literature.
     </p>
   </div>
 
   <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-    <img src="images/sperm_whales.jpg" alt="Sperm Whales">
+    <img src="images/sperm_whales.jpg" 
+    style="display: block; margin: 0 auto; ">
   </a>
 
-  <div>
+  <div style="width: 500px; margin: 20px auto; padding: 30px; background-color: #fafafa;">
     
     <h3>Moby-Dick: A classic tale of the sea</h3>
 
     <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
-      <img src="images/moby_dick.png" alt="Moby Dick" height="200px" style="float: left; margin-right: 40px;">
+      <img src="images/moby_dick.png" alt="Moby Dick" height="200px" style="float: left; margin: 40px;">
     </a>
 
     <p>
