--- a/tags.html
+++ b/tags.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+ <div style="text-align: right;">
+      <a href="index.html" style= "text-decoration: none; color: blue;">Home</a>
+      <a href="tags.html" style="margin-left: 10px; text-decoration: none; color: blue;">Tags</a>
+      <a href="moby_dick.html" style="margin-left: 10px; text-decoration: none; color: blue;">Moby Dick</a>
     </div>
 
    <h1>Important HTML tags</h1>
@@ -48,24 +48,24 @@
         <td style="padding: 10px;">include a paragraph of text</td>
       </tr>
       <tr>
-        <td><code>table</code></td>
-        <td>table</td>
-        <td>include a table</td>
+        <td style="padding: 10px;"><code>table</code></td>
+        <td style="padding: 10px;">table</td>
+        <td style="padding: 10px;">include a table</td>
       </tr>
        <tr>
-        <td><code>tr</code></td>
-        <td>table row</td>
-        <td>include a row of data</td>
+        <td style="padding: 10px;"><code>tr</code></td>
+        <td style="padding: 10px;">table row</td>
+        <td style="padding: 10px;">include a row of data</td>
       </tr>
       <tr>
-        <td><code>th</code></td>
-        <td>table header</td>
-        <td>make a table header</td>
+        <td style="padding: 10px;"><code>th</code></td>
+        <td style="padding: 10px;">table header</td>
+        <td style="padding: 10px;">make a table header</td>
       </tr>
       <tr>
-        <td><code>td</code></td>
-        <td>table data</td>
-        <td>include a table data cell</td>
+        <td style="padding: 10px;"><code>td</code></td>
+        <td style="padding: 10px;">table data</td>
+        <td style="padding: 10px;">include a table data cell</td>
       </tr>
     </table>
   </div>
@@ -82,17 +82,17 @@
       </tr>
       </header>
       <tr>
-        <td><code>em</code></td>
-        <td>emphasized</td>
-        <td>make emphasized text</td>
-        <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
-        <td><em>technical sophistication</em></td>
+        <td style="padding: 10px;"><code>em</code></td>
+        <td style="padding: 10px;">emphasized</td>
+        <td style="padding: 10px;">make emphasized text</td>
+        <td style="padding: 10px;" style="padding: 10px;"><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
+        <td style="padding: 10px;"><em>technical sophistication</em></td>
       </tr>
       <tr>
-        <td><code>strong</code></td>
-        <td>strong</td>
-        <td>make strong text</td>
-        <td>
+        <td style="padding: 10px;"><code>strong</code></td>
+        <td style="padding: 10px;">strong</td>
+        <td style="padding: 10px;">make strong text</td>
+        <td style="padding: 10px;">
           <code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code>
         </td>
         <td><strong>at least a billion people</strong></td>
@@ -141,33 +141,89 @@
       </tr>
       </header>
       <tr>
-        <td><code>ol</code></td>
-        <td>ordered list</td>
-        <td>creates a list with ascending numbers</td>
-        <td><code>&lt;ol&gt;&lt;/ol&gt;</code></td>
-        <td>1.<br>2.<br>3.</td>
+        <td style="padding: 10px;"><code>ol</code></td>
+        <td style="padding: 10px;">ordered list</td>
+        <td style="padding: 10px;">creates a list with ascending numbers</td>
+        <td style="padding: 10px;"><code>&lt;ol&gt;&lt;/ol&gt;</code></td>
+        <td style="padding: 10px;">1.<br>2.<br>3.</td>
       </tr>
       <tr>
-        <td><code>ul</code></td>
-        <td>unordered list</td>
-        <td>creates a list with bullet points</td>
-        kernal
-
-        <td>
+        <td style="padding: 10px;"><code>ul</code></td>
+        <td style="padding: 10px;">unordered list</td>
+        <td style="padding: 10px;">creates a list with bullet points</td>
+        <td style="padding: 10px;">
           <code>&lt;ul&gt;&lt;/ul&gt;</code>
         </td>
         <td>•<br>•<br>•</td>
       </tr>
       <tr>
-        <td><code>li</code></td>
-        <td>list item</td>
-        <td>creates a data cell in a row within a list</td>
-        <td>
-          <code>
-            &lt;li&gt;&lt;/li&gt;
-          </code>
+        <td style="padding: 10px;" style="padding: 10px;"><code>li</code></td>
+        <td style="padding: 10px;">list item</td>
+        <td style="padding: 10px;">creates a data cell in a row within a list</td>
         </td>
-        <td>Result will be whatever fills the list item data cell.</td>
+        <td style="padding: 10px;">Result will be whatever fills the list item data cell.</td>
+      </tr>
+    </table>
+  </div>
+  <h2>HTML 'Document Tags'</h2>
+    <div>
+    <table>
+      <header>
+      <tr>
+        <th>Tag</th>
+        <th>Name</th>
+        <th>Purpose</th>
+      </tr>
+      </header>
+      <tr>
+        <td style="padding: 10px;"><code>html</code></td>
+        <td style="padding: 10px;">html</td>
+        <td style="padding: 10px;">html</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>head</code></td>
+        <td style="padding: 10px;">head</td>
+        <td style="padding: 10px;">head</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>body</code></td>
+        <td style="padding: 10px;">body</td>
+        <td style="padding: 10px;">body</td>
+      </tr>
+       <tr>
+        <td style="padding: 10px;"><code>title</code></td>
+        <td style="padding: 10px;">title</td>
+        <td style="padding: 10px;">title</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>meta</code></td>
+        <td style="padding: 10px;">meta</td>
+        <td style="padding: 10px;">meta</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>span</code></td>
+        <td style="padding: 10px;">span</td>
+        <td style="padding: 10px;">span</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>div</code></td>
+        <td style="padding: 10px;">div</td>
+        <td style="padding: 10px;">div</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>blockquote</code></td>
+        <td style="padding: 10px;">blockquote</td>
+        <td style="padding: 10px;">blockquote</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>header</code></td>
+        <td style="padding: 10px;">header</td>
+        <td style="padding: 10px;">header</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>br</code></td>
+        <td style="padding: 10px;">br</td>
+        <td style="padding: 10px;">br</td>
       </tr>
     </table>
   </div>
