--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       This page is part of the sample site for <a href="https://www.learnenough.com/html"><em>Learn Enough HTML to Be Dangerous</em></a>, which teaches the basics of <strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup <strong>L</strong>anguage, the universal language of the World Wide Web.
       Other related tutorials can be found at <a href="https://www.learnenough.com">learnenough.com</a>.
    </p>
-   <h2>Founders</h2>
+   <h2 id="founders">Founders</h2>
    <p>    
    	  Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
       Donahoe, and Nick Merwin. We believe that the kind of technical
